fixed weird spacing issues

--- a/website-react/src/index.css
+++ b/website-react/src/index.css
@@ -4,6 +4,8 @@
   padding: 0;
 }
 
+
+
 body {
   margin: 0;
   font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -389,7 +391,10 @@ div.loading {
 }
 
 
-
+.house-card-link {
+  color: inherit;
+  text-decoration: none;
+}
 
 .house-card {
   background-color: white;
@@ -524,12 +529,7 @@ div.loading {
   flex-wrap: nowrap;
 }
 
-.hcRoofType {
-  font-size: 12px;
-  color: #777;
-  font-weight: 600;
-  margin-top: -4px; /* pulls it closer to the title */
-}
+
 
 .hcType {
   font-size: 12px;
